--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "sub_model/project_nvim"]
 	path = sub_model/project_nvim
 	url = https://github.com/ahmedkhalf/project.nvim.git
+[submodule "sub_model/lsp-tsserver"]
+	path = sub_model/lsp-tsserver
+	url = https://github.com/tomv564/lsp-tsserver.git
+[submodule "sub_model/nvim-lualine"]
+	path = sub_model/nvim-lualine
+	url = https://github.com/nvim-lualine/lualine.nvim.git
