--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,9 +30,9 @@ bind-key l select-pane -R
 # 切分窗口，快捷键修改为 - 水平切分窗口， \ 垂直切分窗口
 # split window
 unbind '"'
-bind - splitw -v
+bind - splitw -v -c '#{pane_current_path}'
 unbind %
-bind = splitw -h
+bind = splitw -h -c '#{pane_current_path}'
 
 # ctrl + k/j/h/l 调整pane大小,must press prefix  before
 # resize pane
