--- a/config/.tmux.conf
+++ b/config/.tmux.conf
@@ -1,7 +1,12 @@
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'carlocab/tmux-nvr'
+
 # tmux默认快捷键的前缀是 ctrl-b, 我修改成了 ` (数字键1左边的那个键)
 # Set Ctrl-b key bindings
-unbind C-b
-set -g prefix `
+#unbind C-b
+#set -g prefix `
 
 set -g mouse on # 打开鼠标设置
 set-option -g allow-rename off  # 禁止窗口重命名
@@ -89,3 +94,6 @@ set -g status-justify centre # center align window list
 
 # window-name
 #set-option -g allow-rename off
+
+
+run '~/.tmux/plugins/tpm/tpm'
